# AlphaSAGE

./: .gitignore  =12.9.4  README.md  combination_aware_gfn_proposal.md  combine_AFF.py  pyproject.toml  qd_pool.py  qlib_paths.py  robust_icir_combination_design.md  run_adaptive_combination.py  taylor_expansion_network_design.md  train_AFF.py  train_gfn.py  train_ppo.py  train_qcm.py
data/: results.txt
data/gfn_baseline/pool_50/gfn_gnn_csi300_50_0-0.01-1.0-1.0-1.0-0.3-linear-0.0-structmask0/: events.out.tfevents.1783411983.quant2.1184157.0  pool_4999.json  pool_9999.json
data/gfn_baseline/pool_50/gfn_gnn_csi300_50_42-0.01-1.0-1.0-1.0-0.3-linear-0.0-structmask0/: events.out.tfevents.1783412953.quant2.1193669.0  pool_4999.json  pool_9999.json
data/gfn_logs/action_mask_eval_10k_pool50/: summary_partial.json
data/gfn_logs/adaptive_combination_seed0_pool50_10k/: summary.json
data/gfn_logs/pool_10/fumo_lstm_csi300_10_0_20260706194533/: events.out.tfevents.1783338333.quant2.906220.0  pool_999.json
data/gfn_logs/pool_10/fumo_lstm_csi300_10_0_20260706200617/: events.out.tfevents.1783339577.quant2.912164.0  pool_999.json
data/gfn_logs/pool_10/fumo_lstm_csi300_10_0_20260706200811/: events.out.tfevents.1783339691.quant2.912912.0  pool_999.json
data/gfn_logs/pool_100/gfn_gnn_csi300_100_0-0.01-1.0-1.0-1.0-0.3-linear-0.0/: events.out.tfevents.1783323299.quant2.759386.0  pool_10499.json  pool_10999.json  pool_11499.json  pool_11999.json  pool_12499.json  pool_12999.json  pool_14499.json  pool_1499.json  pool_14999.json  pool_15499.json  pool_15999.json  pool_16499.json  pool_16999.json  pool_17499.json  pool_19499.json  pool_1999.json  pool_2499.json  pool_2999.json  pool_3499.json  pool_3999.json  pool_4499.json  pool_4999.json  pool_5499.json  pool_5999.json  pool_6499.json  pool_6999.json  pool_7499.json  pool_7999.json  pool_8499.json  pool_8999.json  pool_9499.json  pool_999.json  pool_9999.json
data/gfn_logs/pool_3/gfn_gnn_csi300_3_0-0.01-1.0-0.5-0.5-0.5-linear-0.0-0.03/: pool_4.json  (+1 more)
src/alpha_gfn/: alpha_pool.py
src/alpha_gfn/env/: core.py
tests/: test_alpha_gfn_action_mask.py  test_qd_pool.py
torchtyping/: __init__.py
(+65 files in other folders)
